--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Kalicia Johnson 
-logo: Facetune_13-02-2025-16-10-20.jpg
+logo: Resized_Resized_20241012_092615_1728743245402_1728743252797.JPEG
 theme: jekyll-theme-architect
