--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Kalicia Johnson 
 logo: Resized_Resized_20241012_092615_1728743245402_1728743252797.JPEG
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
